# homework-18-compiler

./: .gitignore
project1/lex_example/lookahead/: lookahead.l
project1/src/: Makefile  hash.c  subc.h
project2/skeleton2/: hash.c  subc.h  subc.l  subc.y
project2/src/: hash.c  subc.l  subc.y
project3/: error messages.txt  project3.docx
project3/open_test/: ppt.c  ptr_op.c  qna.c  str_op.c  test1.c  test2.c  var_def.c
project3/src/: Makefile  hash.c  subc.h  subc.l  subc.y
project4/Testcode/example/: func1.c
project4/src/: Makefile  gen.c  gen.h  hash.c  ppt.out.2  subc.h  subc.l  subc.y
skeleton/: CMakeLists.txt  hash.c  subc.l
